testsuite/good/decorators/test_decorator_polymorphic_2/DecoratorB.flux
decorator DecoratorB decorates B
methods {
   void methodA() {
      System.out.println("DecoratorB.methodA");
      base.methodA();
   }
   void methodB() {
      System.out.println("DecoratorB.methodB");
      base.methodB();
   }
}