testsuite/bad/test_decorator_base_missing_method/DecoratorA.flux
decorator DecoratorA decorates A
methods {
   methodA() {
      base.oops();
   }
}